Item clear button made functional, made style change to collectios-item component

--- a/frontend/src/components/collection-item/collection-item.styles.scss
+++ b/frontend/src/components/collection-item/collection-item.styles.scss
@@ -5,7 +5,7 @@
   height: 180px;
   align-items: center;
   position: relative;
-  background-color: aqua;
+  background-color:#f0eeee;
   padding: 5px;
 
   .image {
@@ -48,7 +48,7 @@
     }
 
     .date {
-      width: 30%;
+      width: 40%;
       align-items: flex-end;
     }
   }
