--- a/frontend/src/components/collection/collection.styles.scss
+++ b/frontend/src/components/collection/collection.styles.scss
@@ -32,6 +32,33 @@
  
 }
 
+select {
+  margin: 10px;
+  width: 70%;
+  padding: 5px 35px 5px 5px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  height: 34px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background: url(https://robohash.org/Conner%20Schroeder.png?size=120x120) 96% / 15% no-repeat #eee;
+}
+
+/* CAUTION: IE hackery ahead */
+select::-ms-expand { 
+    display: none; /* remove default arrow on ie10 and ie11 */
+}
+
+/* target Internet Explorer 9 to undo the custom arrow */
+@media screen and (min-width:0\0) {
+    select {
+        background:none\9;
+        padding: 5px\9;
+    } 
+}
+
+
 
 
 
